# rust-tls-api

./: .envrc  .gitignore  .travis.yml  .travis.yml-disabled  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  package-publish.sh  update-version.sh
.github/workflows/: ci.yml
api/: Cargo.toml  README.md
api-test/: Cargo.toml  README.md  build.rs
api-test/src/: alpn.rs  benches.rs  client_server.rs  client_server_dyn.rs  gen.rs  gen_rustc_nightly.rs  google.rs  lib.rs  openssl_test_key_gen.rs  t.rs  tokio_google.rs  version.rs
api/src/: acceptor.rs  acceptor_box.rs  assert_kinds.rs  async_as_sync.rs  cert.rs  connector.rs  connector_box.rs  connector_dyn.rs  error.rs  future.rs  impl_test.rs  info.rs  lib.rs  openssl.rs  runtime.rs  socket.rs  socket_box.rs  stream.rs  stream_box.rs  stream_dyn.rs  stream_with_socket.rs  thread_local_context.rs
api/src/spi/: async_as_sync.rs  mod.rs
ci-gen/: Cargo.toml
ci-gen/src/: actions.rs  ghwf.rs  main.rs
examples/: Cargo.toml
examples/examples/: download-rust-lang-org.rs  download-rust-lang.rs
impl-native-tls/: Cargo.toml  README.md  build.rs
impl-native-tls/benches/: generated.rs
impl-native-tls/examples/: client.rs
impl-native-tls/src/: acceptor.rs  connector.rs  error.rs  handshake.rs  lib.rs  stream.rs
impl-native-tls/tests/: test.rs  version.rs
impl-not-tls/: Cargo.toml  README.md
impl-not-tls/src/: acceptor.rs  connector.rs  error.rs  lib.rs  stream.rs
impl-openssl/: Cargo.toml  README.md  build.rs
impl-openssl/examples/: client.rs
impl-openssl/src/: acceptor.rs  connector.rs  error.rs  handshake.rs  lib.rs  stream.rs
impl-openssl/tests/: generated.rs  test.rs  version.rs
impl-rustls/: Cargo.toml  README.md
impl-rustls/benches/: generated.rs
impl-rustls/examples/: client.rs  server.rs
impl-rustls/src/: acceptor.rs  connector.rs  error.rs  handshake.rs  lib.rs  rustls_utils.rs  stream.rs
impl-rustls/tests/: test.rs  version.rs
impl-security-framework/: Cargo.toml  README.md
impl-security-framework/src/: acceptor.rs  connector.rs  error.rs  handshake.rs  lib.rs  stream.rs  stream_stub.rs
impl-security-framework/tests/: generated.rs  test.rs  version.rs
impl-stub/: Cargo.toml  README.md
impl-stub/src/: acceptor.rs  connector.rs  lib.rs  stream.rs
impl-stub/tests/: version.rs
interop/: Cargo.toml  build.rs
interop/tests/: alpn.rs  client_server.rs  server.rs  test.rs
native-tls/: Cargo.toml
native-tls/src/: lib.rs
native-tls/tests/: test.rs
openssl/src/: lib.rs
openssl/tests/: test.rs
test-cert-gen/: Cargo.toml  README.md
test-cert-gen/src/: cert.rs  lib.rs
tls-api-not-tls/: Cargo.toml
tokio-tls-api/: Cargo.toml  README.md
tokio-tls-api-examples/: Cargo.toml
tokio-tls-api-examples/examples/: download-rust-lang.rs
tokio-tls-api/examples/: download-rust-lang.rs
tokio-tls-api/src/: lib.rs  proto.rs
tokio-tls-api/tests/: README.md  bad.rs  google.rs  smoke.rs
