[workspace]
members = [
    "api",
    "api-test",
    "impl-native-tls",
    "impl-not-tls",
    "impl-openssl",
    "impl-rustls",
    "impl-security-framework",
    "impl-stub",
    "examples",
    "interop",
    "ci-gen",
    "test-cert-gen",
]

[workspace.package]
version = "0.12.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>", "Aljaž Mur Eržen <aljaz@edgedb.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edgedb/rust-tls-api/"
edition = "2018"
keywords = ["tls"]

[patch.crates-io]
