[package]
name = "tls-api-test"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "TLS API without implementation"
keywords = ["tls"]

[lib]
bench = false

[dependencies]
tls-api = { path = "../api", package = "tls-api", default-features = false }
log        = "0.4"
env_logger = "0.11.2"
anyhow     = "1.0.44"

pem = "3.0.4"
webpki     = "0.22.0"

tokio = { version = "1.2.0", features = ["net", "io-util", "rt", "rt-multi-thread"], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }

test-cert-gen = { path = "../test-cert-gen", package = "test-cert-gen", default-features = false }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["async-std", "tls-api/runtime-async-std"]
runtime-tokio = ["tokio", "tls-api/runtime-tokio"]
