[package]
name = "tls-api"
version = "0.9.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
description = "TLS API without implementation"
license = "MIT/Apache-2.0"
repository = "https://github.com/stepancheg/rust-tls-api/"
readme = "../README.md"
keywords = ["tls"]
edition = "2018"

[lib]
bench = false

[badges]
travis-ci = { repository = "https://github.com/stepancheg/rust-tls-api/", branch = "master" }

[dependencies]
log        = "0.4"
pem        = "0.8.3"
webpki     = "0.22.0"
tempfile   = "3.3.0"
void       = "1.0.2"
anyhow     = "1.0.44"
thiserror  = "1.0.30"

# Note technically there's no dependency on async-std
futures-util = { version = "0.3.1", features = ["io"], optional = true }

tokio = { version = "1.2.0", features = ["io-util", "net"], optional = true }


[features]
default = ["runtime-tokio"]
runtime-async-std = ["futures-util"]
runtime-tokio = ["tokio"]
