[package]
name = "tls-api-2"
version = "0.11.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>", "Aljaž Mur Eržen <aljaz@edgedb.com>"]
description = "TLS API without implementation"
license = "MIT/Apache-2.0"
repository = "https://github.com/edgedb/rust-tls-api/"
readme = "../README.md"
keywords = ["tls"]
edition = "2018"

[lib]
bench = false

[badges]
travis-ci = { repository = "https://github.com/edgedb/rust-tls-api/", branch = "master" }

[dependencies]
pem = "3.0.4"
tempfile   = "3.3.0"
anyhow     = "1.0.44"
thiserror  = "1.0.30"

# Note technically there's no dependency on async-std
futures-util = { version = "0.3.1", features = ["io"], optional = true }

tokio = { version = "1.2.0", features = ["io-util", "net"], optional = true }


[features]
default = ["runtime-tokio"]
runtime-async-std = ["futures-util"]
runtime-tokio = ["tokio"]
