[package]
name = "tls-api"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "TLS API without implementation"
readme = "../README.md"
keywords = ["tls"]

[lib]
bench = false

[dependencies]
pem = "3.0.4"
tempfile   = "3.3.0"
anyhow     = "1.0.44"
thiserror  = "2"

# Note technically there's no dependency on async-std
futures-util = { version = "0.3.1", features = ["io"], optional = true }

tokio = { version = "1.2.0", features = ["io-util", "net"], optional = true }


[features]
default = ["runtime-tokio"]
runtime-async-std = ["futures-util"]
runtime-tokio = ["tokio"]
