[package]
name = "ci-gen"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "1eecf055a92590c7084cad9c96741ec0dc9206c9" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
