[package]
name = "ci-gen"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "d5fb8ab2a784391794afff6f213a8a4eaf522838" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
