[package]
name = "ci-gen"
publish = false

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "d5fb8ab2a784391794afff6f213a8a4eaf522838" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
