[package]
name = "tls-api-examples"
version = "0.0.0"
authors = ["Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/stepancheg/rust-tls-api"
description = """
Example of tls-api
"""
categories = ["asynchronous", "network-programming"]
publish = false
edition = "2018"

[dependencies]
tokio = { version = "~0.2.6", features = ["full"] }
tls-api = { path = "../api" }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
cfg-if = "0.1"
tls-api-native-tls = { path = "../impl-native-tls" }
tokio = { version = "~0.2.6", features = ["net"] }

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10.20"


[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.1"

[target.'cfg(windows)'.dev-dependencies]
advapi32-sys = "0.2"
crypt32-sys = "0.2"
kernel32-sys = "0.2"
schannel = "0.1"
winapi = "0.2"
