[package]
name = "tls-api-examples"
version = "0.0.0"
authors = ["Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/stepancheg/rust-tls-api"
description = """
Example of tls-api
"""
categories = ["asynchronous", "network-programming"]
publish = false
edition = "2018"

[dependencies]
tls-api = { path = "../api", default-features = false }
tokio = { version = "~0.2.6", features = ["full"], optional = true }
async-std = { version = "1.6.0", features = ["attributes"], optional = true }
tls-api-native-tls = { path = "../impl-native-tls", default-features = false }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["async-std", "tls-api/runtime-async-std", "tls-api-native-tls/runtime-async-std"]
runtime-tokio = ["tokio", "tls-api/runtime-tokio", "tls-api-native-tls/runtime-tokio"]

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
cfg-if = "0.1"
tokio = { version = "~0.2.6", features = ["net"] }

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10.20"


[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.1"

[target.'cfg(windows)'.dev-dependencies]
advapi32-sys = "0.2"
crypt32-sys = "0.2"
kernel32-sys = "0.2"
schannel = "0.1"
winapi = "0.2"
