[package]
name = "tls-api-examples"
version = "0.0.0"
authors = ["Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edgedb/rust-tls-api"
description = """
Example of tls-api
"""
categories = ["asynchronous", "network-programming"]
publish = false
edition = "2018"

[dependencies]
tls-api = { path = "../api", package = "tls-api-2", default-features = false }
tokio = { version = "1.2.0", features = ["full"], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }

tls-api-native-tls = { path = "../impl-native-tls", package = "tls-api-native-tls-2", default-features = false }
tls-api-rustls = { path = "../impl-rustls", package = "tls-api-rustls-2", default-features = false }
tls-api-security-framework = { path = "../impl-security-framework", package = "tls-api-security-framework-2", default-features = false }
tls-api-openssl = { path = "../impl-openssl", package = "tls-api-openssl-2", default-features = false }

[features]
default = ["runtime-tokio"]
runtime-async-std = [
    "async-std",
    "tls-api/runtime-async-std",
    "tls-api-native-tls/runtime-async-std",
    "tls-api-rustls/runtime-async-std",
    "tls-api-security-framework/runtime-async-std",
    "tls-api-openssl/runtime-async-std",
]
runtime-tokio = [
    "tokio",
    "tls-api/runtime-tokio",
    "tls-api-native-tls/runtime-tokio",
    "tls-api-rustls/runtime-tokio",
    "tls-api-security-framework/runtime-tokio",
    "tls-api-openssl/runtime-tokio",
]

[dev-dependencies]
env_logger = { version = "0.11.2", default-features = false }
cfg-if = "0.1"
tokio = { version = "1.2.0", features = ["net"] }

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10.20"


[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = { version = "2.9.2", features = ["alpn"] }

[target.'cfg(windows)'.dev-dependencies]
advapi32-sys = "0.2"
crypt32-sys = "0.2"
kernel32-sys = "0.2"
schannel = "0.1"
winapi = "0.2"
