[package]
name = "tls-api-openssl"
description = "TLS API implementation over openssl crate"
build = "build.rs"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }

[lib]
bench = false

[dependencies]
# To implement OpenSSL version check in build.rs
openssl-sys = { version = "0.9.43" }
openssl = { version = "0.10.20", features = ["v102", "v110"] }
tls-api = { path = "../api", version = "0.12.0",  default-features = false }
tokio = { version = "1.2.0", features = [], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
anyhow = "1.0.44"
thiserror = "2"

[features]
default = ["runtime-tokio"]
runtime-async-std = [
    "async-std",
    "tls-api/runtime-async-std",
    "tls-api-test/runtime-async-std",
]
runtime-tokio = ["tokio", "tls-api/runtime-tokio", "tls-api-test/runtime-tokio"]

[dev-dependencies]
tls-api-test = { path = "../api-test", package = "tls-api-test-2",  version = "0.12.0",  default-features = false }
test-cert-gen = { path = "../test-cert-gen", package = "test-cert-gen-2", version = "0.12.0",  default-features = false }

[build-dependencies]
tls-api-test = { path = "../api-test", package = "tls-api-test-2",  version = "0.12.0",  default-features = false }
