[package]
name = "tls-api-security-framework"
version = "0.6.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
description = "TLS API implementation over rustls crate"
license = "MIT/Apache-2.0"
repository = "https://github.com/stepancheg/rust-tls-api/"
keywords = ["tls"]
edition = "2018"

[lib]
bench = false

[badges]
travis-ci = { repository = "https://github.com/stepancheg/rust-tls-api/", branch = "master" }

[dependencies]
tokio     = { version = "1.2.0", features = [], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
void      = "1.0.2"
anyhow    = "1.0.44"
thiserror = "1.0.30"

tls-api = { path = "../api", version = "=0.6.0-pre", default-features = false }
tls-api-stub = { path = "../impl-stub", version = "=0.6.0-pre", default-features = false }

# this is needed until package-features is stabelized (issue #5364)
tls-api-test = { path = "../api-test", version = "=0.6.0-pre", default-features = false }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
security-framework = { version = "2.0.0", features = ["alpn"] }

[features]
default = ["runtime-tokio"]
runtime-async-std = [
    "async-std",
    "tls-api/runtime-async-std",
    "tls-api-test/runtime-async-std",
    "tls-api-stub/runtime-async-std",
]
runtime-tokio = [
    "tokio",
    "tls-api/runtime-tokio",
    "tls-api-test/runtime-tokio",
    "tls-api-stub/runtime-tokio",
]

[dev-dependencies]
tls-api-test = { path = "../api-test", version = "=0.6.0-pre", default-features = false }
test-cert-gen = { path = "../test-cert-gen", version = "=0.6.0-pre", default-features = false }

[build-dependencies]
tls-api-test = { path = "../api-test", version = "=0.6.0-pre", default-features = false }
