[package]
name = "tls-api-security-framework"
description = "TLS API implementation over rustls crate"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }

[lib]
bench = false

[dependencies]
tokio = { version = "1.2.0", features = [], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
void = "1.0.2"
anyhow = "1.0.44"
thiserror = "2"

tls-api = { path = "../api", version = "0.12.0", default-features = false }
tls-api-stub = { path = "../impl-stub", version = "0.12.0", default-features = false }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
security-framework = { version = "3.0.1", features = ["alpn"] }

[features]
default = ["runtime-tokio"]
runtime-async-std = [
    "async-std",
    "tls-api/runtime-async-std",
    "tls-api-test/runtime-async-std",
    "tls-api-stub/runtime-async-std",
]
runtime-tokio = [
    "tokio",
    "tls-api/runtime-tokio",
    "tls-api-test/runtime-tokio",
    "tls-api-stub/runtime-tokio",
]

[dev-dependencies]
tls-api-test = { path = "../api-test", package = "tls-api-test-2",  version = "0.12.0", default-features = false }
test-cert-gen = { path = "../test-cert-gen", package = "test-cert-gen-2", version = "0.12.0", default-features = false }

[build-dependencies]
tls-api-test = { path = "../api-test", package = "tls-api-test-2",  version = "0.12.0", default-features = false }
