[package]
name = "tls-api-stub"
version = "0.6.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
description = "TLS API implementation that returns error on any operation"
license = "MIT/Apache-2.0"
repository = "https://github.com/stepancheg/rust-tls-api/"
keywords = ["tls"]
edition = "2018"

[badges]
travis-ci = { repository = "https://github.com/stepancheg/rust-tls-api/", branch = "master" }

[dependencies]
void    = "1.0.2"
tokio = { version = "1.2.0", features = [], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }

tls-api = { path = "../api", version = "=0.6.0-pre", default-features = false }

# this is needed until package-features is stabelized (issue #5364)
tls-api-test = { path = "../api-test", version = "=0.6.0-pre", default-features = false }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["tokio", "tls-api/runtime-async-std", "tls-api-test/runtime-async-std"]
runtime-tokio = ["async-std", "tls-api/runtime-tokio", "tls-api-test/runtime-tokio"]

[dev-dependencies]
tls-api-test = { path = "../api-test", version = "=0.6.0-pre", default-features = false }
