[package]
name = "tls-api-stub"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "TLS API implementation that returns error on any operation"
keywords = ["tls"]

[lib]
bench = false

[dependencies]
void      = "1.0.2"
tokio     = { version = "1.2.0", features = [], optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
anyhow    = "1.0.44"
thiserror = "2"

tls-api = { path = "../api", default-features = false }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["tokio", "tls-api/runtime-async-std", "tls-api-test/runtime-async-std"]
runtime-tokio = ["async-std", "tls-api/runtime-tokio", "tls-api-test/runtime-tokio"]

[dev-dependencies]
tls-api-test = { path = "../api-test", default-features = false }
