[package]
name = "interop"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"
description = "Test different implementations compatible with each other"

[lib]
bench = false

[features]
default = ["runtime-tokio"]
runtime-async-std = ["tls-api-test/runtime-async-std", "tls-api-openssl/runtime-async-std", "tls-api-rustls/runtime-async-std", "tls-api-native-tls/runtime-async-std"]
runtime-tokio = ["tls-api-test/runtime-tokio", "tls-api-openssl/runtime-tokio", "tls-api-rustls/runtime-tokio", "tls-api-native-tls/runtime-tokio"]

[dependencies]
tls-api                    = { path = "../api", default-features = false }
tls-api-test               = { path = "../api-test", default-features = false }
tls-api-openssl            = { path = "../impl-openssl", default-features = false }
tls-api-rustls             = { path = "../impl-rustls", default-features = false }
tls-api-native-tls         = { path = "../impl-native-tls", default-features = false }
tls-api-security-framework = { path = "../impl-security-framework", default-features = false }
test-cert-gen              = { path = "../test-cert-gen", default-features = false }
