[package]
name = "interop"
description = "Test different implementations compatible with each other"
publish = false

[lib]
bench = false

[features]
default = ["runtime-tokio"]
runtime-async-std = ["tls-api-test/runtime-async-std", "tls-api-openssl/runtime-async-std", "tls-api-rustls/runtime-async-std", "tls-api-native-tls/runtime-async-std"]
runtime-tokio = ["tls-api-test/runtime-tokio", "tls-api-openssl/runtime-tokio", "tls-api-rustls/runtime-tokio", "tls-api-native-tls/runtime-tokio"]

[dependencies]
tls-api                    = { path = "../api", default-features = false }
tls-api-test               = { path = "../api-test", package = "tls-api-test-2", default-features = false }
tls-api-openssl            = { path = "../impl-openssl", default-features = false }
tls-api-rustls             = { path = "../impl-rustls", default-features = false }
tls-api-native-tls         = { path = "../impl-native-tls", default-features = false }
tls-api-security-framework = { path = "../impl-security-framework", default-features = false }
test-cert-gen              = { path = "../test-cert-gen", package = "test-cert-gen-2", default-features = false }

rustls = { version = "0.23.5", default-features = false, features = ["ring", "tls12"] }
