[package]
name = "test-cert-gen"
description = "Utility to generate certificates for tests (e. g. for TLS)"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
bench = false

[dependencies]
tempfile = "3.3.0"
pem = "3.0.4"
once_cell = "1.10.0"
